--- a/style2.css
+++ b/style2.css
@@ -107,9 +107,13 @@
 	}
 	.userinfo h1{
 		font-size:45px;
-		float:left;
 		margin:auto;
-		padding:25px;
+	}
+	.userinfo .inner {
+		height: 210px;
+		margin: 10px;
+		padding: 10px;
+		width: 50%;
 	}
 	.achievments{
 		position:absolute;
